 Make sure UPnP does not take exclusive control of UDP port 1900

BUG: 179570

svn path=/trunk/extragear/network/ktorrent/; revision=905639